# Copyrightor

./: CMakeLists.txt  Copyrightor.pro  README.md  controler.cpp  controler.h  editionview.cpp  editionview.h  graphicimageitem.cpp  graphicimageitem.h  labeldrag.cpp  labeldrag.h  labelimage.cpp  labelimage.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.cpp  model.h  recources.qrc  selectionview.cpp  selectionview.h
icons/: icon.icns
icons/Src/: Copyrightor.sketch
